# modelcard-tools

./: modelcard.db
examples/: DEMO1.md  DEMO2.md
mcg/: .gitignore  README.md  pyproject.toml
mcg/mcg/: __init__.py  cli.py  extract_runtime_metadata.py  generator.py
mcg/mcg/templates/: runtime_template.yaml
mds/: README.md  pyproject.toml
mds/mds/: cli.py  pull_index.py  registry_config.yaml  search_fields.json  search_service.py
mds/mds.egg-info/: SOURCES.txt  entry_points.txt
mds/mds/mds.egg-info/: PKG-INFO
services/: push.sh  registry-config.yaml
services/oci-artifacts/bert/: modelcard-bert.json
services/oci-artifacts/falcon/: model-falcon.txt  modelcard-falcon.json
services/oci-artifacts/llama/: modelcard-llama.json
services/oci-artifacts/mistral/: modelcard-mistral.json
services/oci-artifacts/xgen/: model-xgen.txt  modelcard-xgen.json
